# personal-agent-doitall

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: static-analysis.yml
src/agent/: __init__.py
src/agent/cli/: __init__.py  main.py
src/agent/core/: __init__.py  artifacts.py  chat.py  config.py  conflicts.py  documents.py  linking.py  llm.py  memory.py  retrieval.py  storage.py  versioning.py
src/agent/web/: app.py
src/agent/web/templates/: base.html  chat.html  chat_session.html  conflicts.html  document_create.html  document_edit.html  document_history.html  document_view.html  documents.html  index.html  links.html  memory.html
tests/: test_artifacts_extra.py  test_chat_llm.py  test_cli.py  test_conflicts_extra.py  test_documents.py  test_documents_extra.py  test_linking.py  test_memory.py  test_retrieval_security.py  test_versioning.py
