[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "personal-agent"
version = "0.1.0"
description = "Local-first personal all-purpose work agent"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "click>=8.1.7",
    "sqlalchemy>=2.0.28",
    "alembic>=1.13.1",
    "sentence-transformers>=2.7.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
    "aiofiles>=23.2.1",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
llm = ["openai>=1.0.0"]
dev = [
    "pytest>=8.1.0",
    "pytest-asyncio>=0.23.5",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
agent = "agent.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
